--- a/Easy.Tools.Result.csproj
+++ b/Easy.Tools.Result.csproj
@@ -23,7 +23,8 @@
 		<AssemblyTitle>Easy.Tools.Result</AssemblyTitle>
 		<AssemblyName>Easy.Tools.Result</AssemblyName>
 		<PackageId>Easy.Tools.Result</PackageId>
-		<Version>1.0.0</Version>
+		<Version>1.0.1</Version>
+		<PackageIcon>icon.png</PackageIcon>
 		<Authors>Elmin Alirzayev</Authors>
 		<Company>Easy Code Tools</Company>
 		<Copyright>Copyright © Elmin Alirzayev 2025</Copyright>
@@ -36,7 +37,7 @@
 		<PackageReleaseNotes>-</PackageReleaseNotes>
 
 		<!-- Build -->
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<NoWarn>$(NoWarn);1591</NoWarn>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -47,6 +48,10 @@
 
 	<ItemGroup>
 		<None Include="README.md">
+			<Pack>true</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+		<None Include="icon.png">
 			<Pack>true</Pack>
 			<PackagePath>\</PackagePath>
 		</None>
