--- a/Easy.Tools.Result.csproj
+++ b/Easy.Tools.Result.csproj
@@ -2,9 +2,11 @@
 
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
-		<TargetFrameworks>net10.0;net9.0;net8.0;net7.0;net6.0;netstandard2.0;netstandard2.1;net48;net47;</TargetFrameworks>
+		<TargetFrameworks>net10.0;net9.0;net8.0;net7.0;net6.0;netstandard2.0;netstandard2.1;net48;net47;net472;</TargetFrameworks>
+		
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<LangVersion>latest</LangVersion>		
 
 		<!-- Deterministic + SourceLink -->
 		<Deterministic>true</Deterministic>
@@ -23,7 +25,7 @@
 		<AssemblyTitle>Easy.Tools.Result</AssemblyTitle>
 		<AssemblyName>Easy.Tools.Result</AssemblyName>
 		<PackageId>Easy.Tools.Result</PackageId>
-		<Version>1.0.1</Version>
+		<Version>1.0.2</Version>
 		<PackageIcon>icon.png</PackageIcon>
 		<Authors>Elmin Alirzayev</Authors>
 		<Company>Easy Code Tools</Company>
@@ -42,7 +44,6 @@
 		<NoWarn>$(NoWarn);1591</NoWarn>
 		<TreatWarningsAsErrors>true</TreatWarningsAsErrors>
 		<SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
-		<LangVersion>latest</LangVersion>
 
 	</PropertyGroup>
 
